--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,7 @@ layout: default
 
     <ul>
       {% for post in site.posts limit:3 %}
+      <img  src="{{ post.main_image }}"/>
         <li>
           <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
