--- a/_sass/partials/_mixins.scss
+++ b/_sass/partials/_mixins.scss
@@ -17,3 +17,8 @@
   -ms-user-select: $argument;
   user-select: $argument;
 }
+
+@mixin container(){
+  max-width: $container-width;
+  margin: 0 auto;
+}
