--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
 <header>
+  <div class="container">
+    <h1>
+      <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    </h1>
+    <nav>
+      {% include navigation.html navigation=site.data.navigation %}
+    </nav>
+  </div>
 
-  <h1>
-    <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-  </h1>
-
-  <nav>
-    {% include navigation.html navigation=site.data.navigation %}
-  </nav>
 
 </header>
