--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,23 +2,19 @@
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
-
-  {% include page-intro.html %}
-
+<div class="container">
+  <div class="two-column-grid">
+    <div>
+      <h2>{{ page.title }}</h2>
+      <img src="/assets/img/uploads/headshot.png">
+    </div>
+    <div>
+      {{page.intro-paragraph}}
+    </div>
+  </div>
   {{ content }}
 
   <section>
-
     <h3>Recent posts from the blog</h3>
-
-    <ul>
-      {% for post in site.posts limit:3 %}
-      <img  src="{{ post.main_image }}"/>
-        <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-
   </section>
+</div>
