Home page and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,17 @@
 <footer>
-
+  <div class="container">
+    <div class="footer__social">
+      <div class="social__icon">
+        <a target="_blank" href="https://instagram.com/av0kad0w">
+          <img alt="Link to Haley Rowe-Kadow's Instgram Page" src="/assets/img/uploads/instagram.svg">
+        </a>
+      </div>
+      <div class="social__icon">
+        <a target="_blank" href="mailto:haleyrowekadow@gmail.com">
+          <img alt='Link to Email Haley Rowe-Kadow' src="/assets/img/uploads/email.svg">
+        </a>
+      </div>
+    </div>
+  </div>
 
 </footer>
