--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,8 @@ layout: default
 ---
 
 <div class="container">
-  <div class="two-column-grid">
+  <div class="home__row">
     <div>
-      <!-- <h2>{{ page.title }}</h2> -->
       <img src="/assets/img/uploads/headshot.png">
     </div>
     <div class="home__intro">
