--- a/_sass/main.css
+++ b/_sass/main.css
@@ -605,127 +605,129 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 2rem;
+  padding: 0rem 1.5rem;
+  height: 10rem;
 }
-
-header > nav {
-  max-width: 1000px;
-  margin: 0 auto;
+header h1 {
+  padding-bottom: 0;
 }
-header > nav ul {
+header > div {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+header nav ul {
+  float: right;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-header > nav ul li {
+header nav ul li {
   margin-right: 2rem;
   display: inline-block;
 }
 @media screen and (min-width: 768px) {
-  header > nav ul li {
+  header nav ul li {
     margin-right: 0;
   }
 }
-header > nav ul li a,
-header > nav ul li a:visited {
-  color: white;
+header nav ul li a,
+header nav ul li a:visited {
   text-decoration: none;
   border: 0;
 }
 @media screen and (min-width: 768px) {
-  header > nav ul li a,
-header > nav ul li a:visited {
+  header nav ul li a,
+header nav ul li a:visited {
     padding: 1rem;
   }
 }
-header > nav ul li a:hover {
-  color: white;
-}
-
-main {
-  width: 100%;
-  max-width: 52rem;
-  margin-right: auto;
-  margin-left: auto;
-  grid-column: main;
-  display: grid;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-@media screen and (min-width: 992px) {
-  main {
-    -ms-flex-line-pack: start;
-        align-content: start;
-  }
-}
-
-@supports (display: grid) {
-  main {
-    width: auto;
-    max-width: none;
-  }
-}
-html[data-current=blog] main > section ul li {
-  padding: 2rem 0;
-  border-bottom: 0.05em solid #e6e6e6;
-}
-html[data-current=blog] main > section ul li p {
-  padding-bottom: 0;
-}
-
-nav[aria-label="Adjacent Posts"] {
-  padding: 4rem 0;
-}
-nav[aria-label="Adjacent Posts"] ul {
+.row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-nav[aria-label="Adjacent Posts"] ul li {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 50%;
-          flex: 0 0 50%;
-  width: auto;
-}
-nav[aria-label="Adjacent Posts"] ul li:nth-child(2) {
-  text-align: right;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-html[data-current=contact] main > form {
+/** HOME PAGE **/
+.home__row {
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: calc(100vh - 200px);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-html[data-current=contact] main > form label {
-  display: none;
-}
-html[data-current=contact] main > form input,
-html[data-current=contact] main > form textarea {
-  width: 100%;
-  padding: 1rem;
-  margin-bottom: 2rem;
-}
-html[data-current=contact] main > form button {
-  width: 100%;
-}
-
-@supports (display: grid) {
-  html[data-current=contact] main > form input,
-html[data-current=contact] main > form textarea,
-html[data-current=contact] main > form button {
-    width: auto;
-    max-width: none;
+@media screen and (max-width: 768px) {
+  .home__row {
+    grid-template-columns: 1fr;
   }
 }
-footer {
-  grid-column: full;
-  display: grid;
-  grid-template-columns: [full-start] minmax(1rem, 1fr) [main-start] minmax(0, 50rem) [main-end] minmax(1rem, 1fr) [full-end];
-  background-color: #f3f3f3;
+.home__row img {
+  height: 500px;
+  width: auto;
+  margin: 0 auto;
 }
-footer > small {
-  grid-column: main;
+.home__row .home__intro {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 3rem;
+}
+.home__row .home__intro p {
+  font-size: 1.6rem;
+}
+
+/** FOOTER **/
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100vw;
+  height: 10rem;
+  color: black;
+}
+footer .footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+footer .footer__social .social__icon {
+  margin: 1rem 0.5rem;
+  border-radius: 100px;
+  border: 2px solid black;
+  padding: 1rem;
+}
+footer .footer__social .social__icon img {
+  height: 20px;
 }
 
 .container {
