--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,23 +5,22 @@ layout: default
 <div class="container">
   {% include page-intro.html %} {{ content }}
 
-  <section>
-    <h3>Posts</h3>
-
-    <ul>
-      {% for post in site.posts %} {% assign author =
-      site.data.authors[post.author] %}
-      <li>
-        <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-        <time datetime="{{ post.date }}">
-          <small>
-            <strong>{{ post.date | date_to_string }}</strong>
-            {% if author %} by {{ author.name }} {% endif %}
-          </small>
-        </time>
-        {{ post.excerpt | strip_newlines | truncate: 180 }}
-      </li>
-      {% endfor %}
-    </ul>
+  <section  class="blog__grid">
+    {% for post in site.posts %} {% assign author =
+    site.data.authors[post.author] %}
+    <div>
+      <a href="{{ post.url }}">
+      <img src="{{post.main_image}}">
+      <h4>{{ post.title }}</h4>
+      <time datetime="{{ post.date }}">
+        <small>
+          <strong>{{ post.date | date_to_string }}</strong>
+          {% if author %} by {{ author.name }} {% endif %}
+        </small>
+      </time>
+      {{ post.excerpt | strip_newlines | truncate: 180 }}
+    </a>
+    </div>
+    {% endfor %}
   </section>
 </div>
