--- a/_sass/partials/_mixins.scss
+++ b/_sass/partials/_mixins.scss
@@ -4,27 +4,43 @@
 @mixin button($btn-bg, $btn-text) {
   font-weight: $bold-font-weight;
   padding: 2rem;
-	line-height: $base-line-height;
-	color: $btn-text;
-	background-color: $btn-bg;
-	border: 3px solid $btn-bg;
+  line-height: $base-line-height;
+  color: $btn-text;
+  background-color: $btn-bg;
+  border: 3px solid $btn-bg;
 }
 
 // Disable text selection
-@mixin user-select($argument: none){
+@mixin user-select($argument: none) {
   -webkit-user-select: $argument;
   -moz-user-select: $argument;
   -ms-user-select: $argument;
   user-select: $argument;
 }
 
-@mixin container(){
+@mixin container() {
   max-width: $container-width;
   margin: 0 auto;
 }
 
-@mixin center-vertically(){
+@mixin center-vertically() {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+@mixin unformatted-link() {
+  text-decoration: none;
+  border: none;
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
+  &:visited{
+    border: none;
+    &:hover{
+      color: inherit;
+    }
+  }
+
+
 }
