--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -6,16 +6,16 @@ layout: default
   {% include page-intro.html %} {{ content }}
 
   <section class="portfolio__grid">
-    {% for post in site.posts %} {% if post.categories contains 'food_styling'
-    %}
-    <div class="post">
-      <h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-      <p class="meta">Date: {{ post.date }}</p>
-      <div class="entry">
-        {{ post.content | strip_html | truncatewords: 100 }}
+    {% for portfolio_item in site.portfolio_items %}
+
+    <a href="{{portfolio_item.link}}">
+      <div>
+        <img src="{{portfolio_item.image}}" />
+        <h1>{{portfolio_item.title}}</h1>
+        <p>{{portfolio_item.categories}}</p>
+        <p>{{portfolio_item.details}}</p>
       </div>
-    </div>
-    {% endif %} 
+    </a>
     {% endfor %}
   </section>
 </div>
