--- a/_sass/main.css
+++ b/_sass/main.css
@@ -694,6 +694,49 @@ header nav ul li a:visited {
   font-size: 1.6rem;
 }
 
+/** BLOG */
+.blog__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.blog__grid > div {
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: white;
+}
+.blog__grid > div:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+.blog__grid > div a {
+  text-decoration: none;
+  border: none;
+  color: black;
+}
+.blog__grid > div a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+.blog__grid > div a:visited {
+  border: none;
+}
+.blog__grid > div a:visited:hover {
+  color: inherit;
+}
+.blog__grid > div img {
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 /** FOOTER **/
 footer {
   display: -webkit-box;
@@ -730,8 +773,56 @@ footer .footer__social .social__icon img {
   height: 20px;
 }
 
+.portfolio__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 3rem;
+  padding: 4rem 0;
+}
+@media screen and (max-width: 768px) {
+  .portfolio__grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 480px) {
+  .portfolio__grid {
+    grid-template-columns: 1fr;
+  }
+}
+.portfolio__grid a {
+  color: black;
+}
+.portfolio__grid .item {
+  padding: 2rem;
+  border: 1px solid black;
+  -webkit-box-shadow: 5px 5px 0px 0px black;
+          box-shadow: 5px 5px 0px 0px black;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  height: 100%;
+}
+.portfolio__grid .item:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.portfolio__grid .item h2 {
+  padding-bottom: 0.5rem;
+}
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
+  padding: 4rem 0;
+}
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0rem 2rem;
+  }
+}
+
+.content {
+  min-height: calc(100vh - 300px);
 }
 /*# sourceMappingURL=main.css.map */
