--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -58,7 +58,6 @@ header {
 .home__row {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: calc(100vh - 200px);
   align-items: center;
 
   @media screen and (max-width: $screen-sm-min) {
@@ -88,9 +87,10 @@ header {
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: white;
+    transition: transform 0.3s ease-in-out;
+
     &:hover{
       transform: scale(1.01);
-      transition: transform 0.3s ease-in-out;
     }
     a {
       @include unformatted-link();
@@ -124,6 +124,39 @@ footer {
       img {
         height: 20px;
       }
+    }
+  }
+}
+
+.portfolio__grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 3rem;
+  padding: 4rem 0;
+  @media screen and (max-width: $screen-sm-min) {
+    grid-template-columns: 1fr 1fr;
+  }
+  @media screen and (max-width: $screen-xs-min) {
+    grid-template-columns: 1fr;
+  }
+  a{
+    color: black;
+  }
+  .item{
+    padding: 2rem;
+    border: 1px solid black;
+    box-shadow: 5px 5px 0px 0px rgba(0,0,0,1);
+    transition: all 0.3s ease-in-out;
+    height: 100%;
+
+    &:hover{
+      cursor: pointer;
+      transform: scale(1.01);
+
+    }
+    h2 {
+     padding-bottom: 0.5rem;
     }
   }
 }
