--- a/_sass/main.css
+++ b/_sass/main.css
@@ -535,13 +535,14 @@ p + h1, figure + h1, p + h2, figure + h2, p + h3, figure + h3, p + h4, figure + 
 }
 
 p.intro {
-  font-size: 2.4rem;
+  font-size: 2rem;
   color: #8e8e8e;
   padding-bottom: 4rem;
 }
 @media screen and (min-width: 768px) {
   p.intro {
     padding-bottom: 4rem;
+    font-size: 1.6rem;
   }
 }
 
@@ -619,6 +620,14 @@ header > div {
           align-items: center;
   width: 100%;
 }
+@media screen and (max-width: 768px) {
+  header > div {
+    grid-template-columns: 1fr;
+  }
+  header > div h1 {
+    text-align: center;
+  }
+}
 header nav ul {
   float: right;
   display: -webkit-box;
@@ -662,7 +671,6 @@ header nav ul li a:visited {
 .home__row {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: calc(100vh - 200px);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -699,20 +707,25 @@ header nav ul li a:visited {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+@media screen and (min-width: 768px) {
+  .blog__grid {
+    grid-template-columns: 1fr;
+  }
+}
 .blog__grid > div {
   margin: 1rem;
   padding: 1rem;
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: white;
-}
-.blog__grid > div:hover {
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
   transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+.blog__grid > div:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 .blog__grid > div a {
   text-decoration: none;
@@ -735,6 +748,41 @@ header nav ul li a:visited {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+
+.blog__image {
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  margin: 2rem 0;
+}
+
+.adjacent-posts {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.adjacent-posts .adjacent-posts__prev, .adjacent-posts .adjacent-posts__next {
+  text-decoration: none;
+  border: none;
+}
+.adjacent-posts .adjacent-posts__prev:hover, .adjacent-posts .adjacent-posts__next:hover {
+  text-decoration: none;
+  color: inherit;
+}
+.adjacent-posts .adjacent-posts__prev:visited, .adjacent-posts .adjacent-posts__next:visited {
+  border: none;
+}
+.adjacent-posts .adjacent-posts__prev:visited:hover, .adjacent-posts .adjacent-posts__next:visited:hover {
+  color: inherit;
+}
+.adjacent-posts .adjacent-posts__prev {
+  grid: 1/1;
+}
+.adjacent-posts .adjacent-posts__next {
+  grid: 2/1;
+  text-align: right;
 }
 
 /** FOOTER **/
@@ -804,8 +852,8 @@ footer .footer__social .social__icon img {
 }
 .portfolio__grid .item:hover {
   cursor: pointer;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 .portfolio__grid .item h2 {
   padding-bottom: 0.5rem;
