--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -21,6 +21,13 @@ header {
     grid-template-columns: 1fr 3fr;
     align-items: center;
     width: 100%;
+    @media screen and (max-width: $screen-sm-min) {
+      grid-template-columns: 1fr;
+
+      h1 {
+        text-align: center;
+      }
+    }
   }
   nav {
     ul {
@@ -81,6 +88,9 @@ header {
 .blog__grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  @media screen and (max-width: $screen-sm-min) {
+   grid-template-columns: 1fr;
+  }
   > div {
     margin: 1rem;
     padding: 1rem;
@@ -143,6 +153,8 @@ footer {
       border-radius: 100px;
       border: 2px solid black;
       padding: 1rem;
+      height: 45px;
+      width: 45px;
       img {
         height: 20px;
       }
